istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colors
spec:
  gateways:
  - colors-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: color-coded
        port:
          number: 80
      weight: 80
    - destination:
        host: color-coded-green         
        port:
          number: 80
      weight: 20
